k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier-service
  namespace: app
  labels:
    app: notifier-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier-service
  template:
    metadata:
      labels:
        app: notifier-service
    spec:
      imagePullSecrets:
        - name: image-pull-secret
      containers:
        - name: notifier-service
          image: ghcr.io/khachaturb/notifier-service:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
