k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
  namespace: app
spec:
  selector:
    app: notifier-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
